// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTableHeaderCell customize 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="info bazinga"
      >
        Test
      </th>
    </tr>
  </thead>
</table>
`;

exports[`loads and displays CxTableHeaderCell component 1`] = `
<table>
  <thead>
    <tr>
      <th />
    </tr>
  </thead>
</table>
`;
